--- a/savedsearch-ear/.settings/org.eclipse.wst.common.component
+++ b/savedsearch-ear/.settings/org.eclipse.wst.common.component
@@ -23,5 +23,20 @@
         <dependent-module archiveName="log4j-1.2.17.jar" deploy-path="/lib" handle="module:/classpath/var/SSF/dependencies/artifactory/log4j-1.2.17.jar">
             <dependency-type>uses</dependency-type>
         </dependent-module>
+        <dependent-module archiveName="emaas-platform-tenant-sdk-0.1.jar" deploy-path="/lib" handle="module:/classpath/var/SSF/dependencies/artifactory/emaas-platform-tenant-sdk-0.1.jar">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
+        <dependent-module archiveName="httpclient-4.3.1.jar" deploy-path="/lib" handle="module:/classpath/var/SSF/dependencies/artifactory/httpclient-4.3.1.jar">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
+        <dependent-module archiveName="httpcore-4.3.jar" deploy-path="/lib" handle="module:/classpath/var/SSF/dependencies/artifactory/httpcore-4.3.jar">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
+        <dependent-module archiveName="httpcore-4.3.jar" deploy-path="/lib" handle="module:/classpath/var/SSF/dependencies/artifactory/httpcore-4.3.jar">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
+        <dependent-module archiveName="commons-logging-1.1.1.jar" deploy-path="/lib" handle="module:/classpath/var/SSF/dependencies/artifactory/commons-logging-1.1.1.jar">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
     </wb-module>
 </project-modules>
